--- a/baseUiLibrary/build.gradle
+++ b/baseUiLibrary/build.gradle
@@ -29,8 +29,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
+    implementation "com.android.support:cardview-v7:$support_version"
     implementation "com.android.support:design:$support_version"
     //RecyclerViewAdapter框架
-//    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
+    //圆形imageView
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
 }
