--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,8 @@ dependencies {
     //图片加载框架
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     //RecyclerViewAdapter框架
-//    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
-
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
+    //tab
+    implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
 
 }
