--- a/baseUiLibrary/build.gradle
+++ b/baseUiLibrary/build.gradle
@@ -35,5 +35,7 @@ dependencies {
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
     //圆形imageView
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    //图片加载框架
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
 
 }
