--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -72,7 +73,18 @@
         <activity android:name=".ui.Personal.activity.ApplyCustomerActivity" />
         <activity android:name=".ui.Personal.activity.MerchantEntryRecordActivity" />
         <activity android:name=".ui.Personal.activity.MerchantEntryRecordDetailActivity" />
-        <activity android:name=".ui.Personal.activity.PickGoodsActivity"></activity>
+        <activity android:name=".ui.Personal.activity.PickGoodsActivity" />
+        <activity android:name=".ui.home.activity.GoodsDetailActivity" />
+        <activity android:name=".ui.home.activity.PaySucceefulActivity" />
+        <activity android:name=".ui.home.activity.PayOrderActivity" />
+        <activity android:name=".ui.Personal.activity.AskQuestionActivity" />
+        <activity android:name=".ui.Personal.activity.AskQuestionDetailActivity" />
+        <activity android:name=".ui.Personal.activity.FeedBackActivity" />
+        <activity android:name=".ui.Personal.activity.AboutMeActivity" />
+        <activity android:name=".ui.Personal.activity.CustomerServiceAcitivity" />
+        <activity android:name=".ui.Personal.activity.MessageActivity" />
+        <activity android:name=".ui.Personal.activity.MessageDetailActivity" />
+        <activity android:name=".ui.Personal.activity.PersonalSettingActivity"></activity>
     </application>
 
 </manifest>
