--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets{
+        main{
+            jniLibs.srcDirs=['libs']
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -81,6 +87,7 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     implementation 'com.flyco.dialog:FlycoDialog_Lib:1.3.2@aar'
     implementation 'com.android.support:design:27.0.2'
-
+    compile(name: 'LiteAVSDK_Professional_5.1.5293', ext: 'aar')
+    compile(name: 'liteimsdk-release', ext: 'aar')
 
 }
