--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "https://dl.bintray.com/thelasterstar/maven/" }
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
