--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,13 @@ android {
         versionName version_name
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        manifestPlaceholders = [
 
+                JPUSH_PKGNAME: applicationId,
+                JPUSH_APPKEY : "a73caa288faefa4682fb8a34", //JPush上注册的包名对应的appkey.
+                JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
+                qqappid      : "1106602798",//腾讯开放平台Appid替换
+        ]
         buildConfigField "boolean", "IS_DEV", "false"
 
         buildConfigField "String", "DEV_DOMAIN", "\"http://192.168.0.110\""
@@ -28,9 +34,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets{
-        main{
-            jniLibs.srcDirs=['libs']
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 
@@ -87,7 +93,15 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     implementation 'com.flyco.dialog:FlycoDialog_Lib:1.3.2@aar'
     implementation 'com.android.support:design:27.0.2'
+    implementation 'cn.jiguang.sdk:jpush:3.1.1'
+    implementation 'cn.jiguang.sdk:jcore:1.1.9'
     compile(name: 'LiteAVSDK_Professional_5.1.5293', ext: 'aar')
     compile(name: 'liteimsdk-release', ext: 'aar')
-
+    implementation 'com.github.LoveJ2057:XxAnyPay:1.0.2'
+//    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.0.2'
+//    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    implementation 'com.umeng.sdk:share-core:latest.integration'
+    implementation 'com.umeng.sdk:share-qq:6.9.1.1'
+    implementation 'com.umeng.sdk:share-wechat:latest.integration'
+    implementation 'com.umeng.sdk:share-sina:latest.integration'
 }
