--- a/baseUtilsLibrary/build.gradle
+++ b/baseUtilsLibrary/build.gradle
@@ -33,5 +33,7 @@ dependencies {
     api 'com.squareup.retrofit2:converter-gson:2.4.0'
     api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     api 'com.blankj:utilcode:1.17.0'
+    //轮播图
+    api 'com.bigkoo:convenientbanner:2.0.5'
 
 }
