--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,12 +93,12 @@
             android:exported="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
             android:name="com.sina.weibo.sdk.web.WeiboSdkWebActivity"
             android:configChanges="keyboardHidden|orientation"
             android:exported="false"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sina.weibo.sdk.share.WbShareTransActivity"
             android:launchMode="singleTask"
@@ -109,13 +109,16 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashActivity"
+            android:theme="@style/MainTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"></activity>
+
         <!-- ***********************************直播模块*********************************** -->
         <activity
             android:name=".ui.live.activity.LiveDetailsActivity"
@@ -181,7 +184,7 @@
         <activity android:name=".ui.Personal.activity.NeedNoteActivity" />
         <activity android:name=".ui.live.activity.LivePlayerActivity" />
         <activity android:name=".GuideActivity" />
-        <activity android:name=".ui.live.activity.LiveGoodsActivity"></activity>
+        <activity android:name=".ui.live.activity.LiveGoodsActivity" />
     </application>
 
 </manifest>
