--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,7 +108,7 @@ dependencies {
     implementation 'com.umeng.sdk:share-core:latest.integration'
     implementation 'com.umeng.sdk:share-qq:6.9.1.1'
     implementation 'com.umeng.sdk:share-wechat:latest.integration'
-    implementation 'com.umeng.sdk:share-sina:latest.integration'
+    implementation 'com.umeng.sdk:share-sina:6.9.1'
     implementation files('libs/bugly_2.4.0_imsdk_release.jar')
     implementation files('libs/imsdk.jar')
     implementation files('libs/imsdk_group_ext.jar')
@@ -119,4 +119,7 @@ dependencies {
     implementation files('libs/tls_sdk.jar')
     implementation files('libs/wup-1.0.0-SNAPSHOT.jar')
     implementation project(':qrcode')
+    compile('org.devio.takephoto:takephoto_library:4.1.0') {
+        exclude group: 'com.github.bumptech.glide'
+    }
 }
