--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,8 +118,9 @@ dependencies {
     implementation files('libs/qalsdk.jar')
     implementation files('libs/tls_sdk.jar')
     implementation files('libs/wup-1.0.0-SNAPSHOT.jar')
-    implementation project(':qrcode')
+//    implementation project(':qrcode')
     compile('org.devio.takephoto:takephoto_library:4.1.0') {
         exclude group: 'com.github.bumptech.glide'
     }
+    compile project(path: ':qrcode')
 }
