--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ android {
         buildConfigField "String", "RELEASE_DOMAIN", "\"http://feicui.wbgdev.cn\""
         ndk {
             //设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）
-            abiFilters "armeabi", "armeabi-v7a"
+            abiFilters  "armeabi","armeabi-v7a"
+            //, "arm64-v8a", "x86", "arm64-v8a", "x86_64"
 
         }
     }
